# parallel-programming-projects

image_composition_exam/: main.py  parallel_composition.py  results_8cores_20250703_112714.csv  results_8cores_20250703_142839.csv  results_8cores_20250704_160831.csv  sequential_composition.py
kmeans/: CMakeLists.txt  kmeans  kmeans_performance.csv  kmeans_speedup_data.csv  main.cpp  test.py
